--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,8 @@
     content: ' *';
     color: red;
   }
+
+  .blur-background-effect{
+    backdrop-filter: blur(70px);
+    background: hsla(240, 5%, 96%, .8);
+  }
